2003-08-25  Christian M. Stamgren  <christian@stamgren.com>

	* Added files README TODO AUTHORS